# IPHR_Direction

./: .gitignore  lit-review.md  project-plan.md  pyproject.toml
data/: manual_review.csv
experiments/canonical_v1/: manifest.json
experiments/canonical_v1/trajectories/: eval_trajectories.csv  train_trajectories.csv
experiments/run_20251228_204835_expand_dataset/: FINDINGS_REPORT.md  config.json
experiments/run_20251228_204835_expand_dataset/trajectories/: dates.csv  geography.csv  population.csv
experiments/run_20251229_051428_sycophancy/: REPORT.md  config.json  manifest.json  summary.json
experiments/run_20251229_051428_sycophancy/trajectories/: sycophancy.csv
notebooks/: 01_quick_test.ipynb  02_expand_dataset.ipynb  03_extract_activations.ipynb  04_train_probes.ipynb  05_probe_geography_only.ipynb  06_sycophancy_data_generation.ipynb  06b_expand_sycophancy_data.ipynb  07_sycophancy_activations.ipynb  08_sycophancy_probes.ipynb  09_sycophancy_steering.ipynb  10_cross_model_deepseek.ipynb  pipeline_full_experiment.ipynb
scripts/: expand_sycophancy_data.py  quick_easy_pairs_test.py  relabel_trajectories.py
src/: __init__.py  data_generation.py  experiment_utils.py  labeling.py  sycophancy.py  sycophancy_manifest.py
